[gd_scene load_steps=10 format=3 uid="uid://cy6gjblx2p1o8"]

[ext_resource type="Script" uid="uid://ceatyaki17jgj" path="res://music_controller/music_controlelr.gd" id="1_76wrj"]
[ext_resource type="AudioStream" uid="uid://bjxwqlba8dyve" path="res://assets/audio/music/shaker-1.wav" id="2_4l31x"]
[ext_resource type="AudioStream" uid="uid://b4xw5fuh7p0bi" path="res://assets/audio/music/shaker-2.wav" id="3_330i6"]
[ext_resource type="AudioStream" uid="uid://co8kut360dn8" path="res://assets/audio/music/conga-1.wav" id="4_as4b8"]
[ext_resource type="AudioStream" uid="uid://bfwlneudpfjvm" path="res://assets/audio/music/bass-1.wav" id="5_linhu"]
[ext_resource type="AudioStream" uid="uid://b3j72v7m5og68" path="res://assets/audio/music/lead-1.wav" id="6_sljxj"]
[ext_resource type="AudioStream" uid="uid://bkguihwh4ua5v" path="res://assets/audio/music/lead-1-add-1.wav" id="7_ro2ld"]
[ext_resource type="AudioStream" uid="uid://dkebl07vw48j2" path="res://assets/audio/music/lead-1-sub-1.wav" id="8_m0pvb"]
[ext_resource type="AudioStream" uid="uid://c3fdw72ng7s5y" path="res://assets/audio/music/lead-1-sub-2.wav" id="9_581op"]

[node name="MusicController" type="Node"]
script = ExtResource("1_76wrj")

[node name="MusicTracks" type="Node" parent="."]

[node name="Shaker1" type="AudioStreamPlayer" parent="MusicTracks"]
stream = ExtResource("2_4l31x")
bus = &"Music"

[node name="Shaker2" type="AudioStreamPlayer" parent="MusicTracks"]
stream = ExtResource("3_330i6")
bus = &"Music"

[node name="Conga1" type="AudioStreamPlayer" parent="MusicTracks"]
stream = ExtResource("4_as4b8")
bus = &"Music"

[node name="Bass1" type="AudioStreamPlayer" parent="MusicTracks"]
stream = ExtResource("5_linhu")
bus = &"Music"

[node name="Lead1" type="AudioStreamPlayer" parent="MusicTracks"]
stream = ExtResource("6_sljxj")
bus = &"Music"

[node name="Lead1Add1" type="AudioStreamPlayer" parent="MusicTracks"]
stream = ExtResource("7_ro2ld")
bus = &"Music"

[node name="Lead1Sub1" type="AudioStreamPlayer" parent="MusicTracks"]
stream = ExtResource("8_m0pvb")
bus = &"Music"

[node name="Lead1Sub2" type="AudioStreamPlayer" parent="MusicTracks"]
stream = ExtResource("9_581op")
bus = &"Music"
